Updated predict text

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           </div>
           <div class="col-12 col-sm-8 col-md-9">
             <h3 class="my-4">Previsão</h3>
-            <p>Defina um valor de X (Independente) para gerar a sua previsão baseada no modelo de treinamento.</p>
+            <p>Defina um valor de X para gerar a previsão de Y baseado no modelo de treinamento.</p>
             <div id="input-container" class="mb-3 col-12 col-md-4 col-lg-3">
               <div class="input-group mb-2">
                 <input type="number" class="form-control" placeholder="X" id="predict-x">
